# VpnMediator-public

./: .gitignore  CLAUDE.md  DeviceFeedAccessPolicy.cs  IMPLEMENTATION-VALIDATION.md  MediatorStorage.cs  Program.cs  README.md  UnifiedSubscriptionFeed.cs  VpnMediator.csproj  appsettings.json  combine_vpnmediator_code.sh  update_vpn_mediator.sh
VpnAccessBot/: .env.example  README.md  alembic.ini  pyproject.toml
VpnAccessBot/alembic/: env.py
VpnAccessBot/deploy/: backup.service
VpnAccessBot/docs/: deployment-guide.md
VpnAccessBot/tests/: test_access_boundary.py  test_admin_broadcast.py  test_admin_reconciliation_handlers.py  test_admin_subscription_security.py  test_advertising_readiness.py  test_branding.py  test_buy.py  test_checkout_tokens.py  test_checkout_web_integration.py  test_checkout_web_security.py  test_commerce.py  test_common_menu.py  test_credential_delivery.py  test_db_integrity.py  test_device_issuance_retry.py  test_device_upgrade.py  test_dual_payment_pricing.py  test_entitlement_lifecycle.py  test_expiration_policy.py  test_health.py  test_keyboards.py  test_mediator_client.py  test_multibot_and_logging.py  test_multibot_financial_and_reset.py  test_notification_outbox_resilience.py  test_onboarding_observation.py  test_payment_confirmation_outbox.py  test_payment_recovery.py  test_payments.py  test_precheckout_deadline.py  test_product_completion.py  test_quote_ownership.py  test_readiness.py  test_reconciliation_safety.py  test_refund_architecture.py  test_reliability_lifecycle.py  test_reliable_polling.py  test_retention.py  (+13 more)
(+143 files in other folders)
