[build-system]
requires = ["setuptools==80.9.0", "wheel==0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-access-bot"
version = "0.1.0"
description = "Telegram bot for selling and managing mediated VPN subscriptions."
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiogram[proxy]>=3.29,<4.0",
    "aiohttp>=3.14.1,<3.15",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.14.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.4.0,<2.0",
    "ruff>=0.7,<1.0",
    "pip-audit>=2.7,<3.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["vpn_access_bot*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
